// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownLight /> should match the snapshots 1`] = `
<DocumentFragment>
  .c3 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3::-webkit-calendar-picker-indicator,
.c3::-webkit-search-cancel-button {
  display: none;
}

.c3::-ms-clear {
  display: none;
}

.c3:hover,
.c3:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c3[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c3[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
  color: inherit;
}

.c6 {
  display: inline-block;
  pointer-events: none;
  width: 24px;
}

.c0 {
  position: relative;
  color: #424242;
}

.c5 {
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  margin-top: 0px;
  -webkit-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-size: 16px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c5:disabled {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
  box-shadow: none;
  cursor: not-allowed;
}

.c5:hover:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c5:focus:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c1 {
  position: relative;
}

.c4 {
  margin-top: 8px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
        for=""
      />
      <input
        aria-label="selecione uma opção"
        class="c3 c4"
        hidden=""
        name=""
        type="text"
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="abrir lista de itens"
        class="c5"
      >
        Select an option
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root c6"
          data-qtm-preloader="icon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<DropdownLight /> should match the snapshots 2`] = `
<DocumentFragment>
  .c3 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3::-webkit-calendar-picker-indicator,
.c3::-webkit-search-cancel-button {
  display: none;
}

.c3::-ms-clear {
  display: none;
}

.c3:hover,
.c3:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c3[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c3[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
  color: inherit;
}

.c6 {
  display: inline-block;
  pointer-events: none;
  width: 24px;
}

.c0 {
  position: relative;
  color: #424242;
}

.c5 {
  width: 100%;
  border-radius: 4px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-align: left;
  margin-top: 0px;
  -webkit-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  font-size: 16px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c5:disabled {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
  box-shadow: none;
  cursor: not-allowed;
}

.c5:hover:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c5:focus:enabled {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgb(18 80 196 / 20%),0px 2px 2px 0px rgb(18 80 196 / 14%),0px 1px 5px 0px rgb(18 80 196 / 12%);
}

.c1 {
  position: relative;
}

.c4 {
  margin-top: 8px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
        for=""
      />
      <input
        aria-label="selecione uma opção"
        class="c3 c4"
        hidden=""
        name="dropdown-name"
        type="text"
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="abrir lista de itens"
        class="c5"
      >
        Select an option
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root c6"
          data-qtm-preloader="icon"
          focusable="false"
          style="font-size: 24px; max-width: 24px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
